--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
+<html>
 <head>
-<title>Mollomm1's Test Page</title>
+<title>
+Mollomm1's Projects</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
+<meta name="description" content="Here I Put Every Of My Projects">
+<style>
+body {background-color:#ffffff;background-repeat:repeat;background-position:top left;background-attachment:fixed;}
+h1{text-align:center;font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
+p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+</style>
 </head>
 <body>
-  i love women
+<h1>Mollomm1's Projects</h1>
+<p></p>
 </body>
+</html>
