--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </head>
 <body>
 <h1>Mollomm1's Projects</h1>
-<p></p>
+<p>Home</p>
+<p>Test</p>
 </body>
 </html>
