--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </style>
 </head>
 <body>
-<h1>Mollomm1's Projects</h1>
-<p>Home</p>
-<p>Test</p>
+<p style="text-align:center"><span style="font-size:48px"><u><strong><span style="font-family:Arial,Helvetica,sans-serif">Mollomm1&#39;s Projects</span></strong></u></span></p>
+
+<p style="text-align:center"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://mollomm1.github.io/Home">Home</a> | <a href="https://mollomm1.github.io/Roblox-Projects">Roblox Projects</a> | <a href="https://mollomm1.github.io/win-apps">Windows Apps</a></span></span></p>
+
 </body>
 </html>
