--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Mollomm1's Projects</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
 <meta name="description" content="Here I Put Every Of My Projects">
-<meta http-equiv="refresh" content="0;URL=https://mollomm1.github.io">
+<meta http-equiv="refresh" content="0;URL=https://mollomm1.github.io/Home">
 </head>
 <body>
 </body>
