--- a/Home/index.html
+++ b/Home/index.html
@@ -7,19 +7,23 @@ Mollomm1's Projects</title>
 <meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
 <meta name="description" content="Here I Put Every Of My Projects">
 <style>
+background: grey;
 body {background-color:#ffffff;background-repeat:repeat;background-position:top left;background-attachment:fixed;}
 h1{text-align:center;font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
 p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
 </style>
 </head>
 <body>
-<p style="text-align:center"><span style="font-size:48px"><u><strong><span style="font-family:Arial,Helvetica,sans-serif">Mollomm1&#39;s Projects</span></strong></u></span></p>
+<p style="text-align:center"><span style="color:#ffffff"><span style="font-size:48px"><u><strong><span style="font-family:Arial,Helvetica,sans-serif">Mollomm1&#39;s Projects</span></strong></u></span></span></p>
 
 <hr />
-<p style="text-align:center"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://mollomm1.github.io/Home">Home</a> | <a href="https://mollomm1.github.io/Roblox-Projects">Roblox Projects</a> | <a href="https://mollomm1.github.io/win-apps">Windows Apps</a></span></span></p>
+<p style="text-align:center"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://mollomm1.github.io/Home"><span style="background-color:#ffffff">Home</span></a><span style="background-color:#ffffff"> | </span><a href="https://mollomm1.github.io/Roblox-Projects"><span style="background-color:#ffffff">Roblox Projects</span></a><span style="background-color:#ffffff"> | </span><a href="https://mollomm1.github.io/win-apps"><span style="background-color:#ffffff">Windows Apps</span></a></span></span></p>
 
 <hr />
-<p>&nbsp;</p>
+<p style="text-align:center"><span style="font-size:72px"><span style="background-color:#4e5f70">&nbsp; &nbsp; &nbsp; <span style="color:#ffffff">Home</span>&nbsp; &nbsp; &nbsp;&nbsp;</span></span></p>
+
+<p style="text-align:center"><span style="color:#ffffff"><span style="font-size:28px">(W.I.P)</span></span></p>
+
 
 </body>
 </html>
