--- a/Home/index.html
+++ b/Home/index.html
@@ -7,8 +7,7 @@ Mollomm1's Projects</title>
 <meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
 <meta name="description" content="Here I Put Every Of My Projects">
 <style>
-background: grey;
-body {background-color:#ffffff;background-repeat:repeat;background-position:top left;background-attachment:fixed;}
+body {background-color:#4B4B4B;background-repeat:repeat;background-position:top left;background-attachment:fixed;}
 h1{text-align:center;font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
 p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
 </style>
