--- a/Home/index.html
+++ b/Home/index.html
@@ -8,15 +8,15 @@ Mollomm1's Projects</title>
 <meta name="description" content="Here I Put Every Of My Projects">
 <style>
 body {background-color:#4B4B4B;background-repeat:repeat;background-position:top left;background-attachment:fixed;}
-h1{text-align:center;font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+h1{text-align:center;font-family:Arial, sans-serif;color:#000000;background-color:#4B4B4B;}
+p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#4B4B4B;}
 </style>
 </head>
 <body>
 <p style="text-align:center"><span style="color:#ffffff"><span style="font-size:48px"><u><strong><span style="font-family:Arial,Helvetica,sans-serif">Mollomm1&#39;s Projects</span></strong></u></span></span></p>
 
 <hr />
-<p style="text-align:center"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://mollomm1.github.io/Home"><span style="background-color:#ffffff">Home</span></a><span style="background-color:#ffffff"> | </span><a href="https://mollomm1.github.io/Roblox-Projects"><span style="background-color:#ffffff">Roblox Projects</span></a><span style="background-color:#ffffff"> | </span><a href="https://mollomm1.github.io/win-apps"><span style="background-color:#ffffff">Windows Apps</span></a></span></span></p>
+<p style="text-align:center"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://mollomm1.github.io/Home"><span style="background-color:#4B4B4B">Home</span></a><span style="background-color:#ffffff"> | </span><a href="https://mollomm1.github.io/Roblox-Projects"><span style="background-color:#ffffff">Roblox Projects</span></a><span style="background-color:#ffffff"> | </span><a href="https://mollomm1.github.io/win-apps"><span style="background-color:#ffffff">Windows Apps</span></a></span></span></p>
 
 <hr />
 <p style="text-align:center"><span style="font-size:72px"><span style="background-color:#4e5f70">&nbsp; &nbsp; &nbsp; <span style="color:#ffffff">Home</span>&nbsp; &nbsp; &nbsp;&nbsp;</span></span></p>
