--- a/Home/index.html
+++ b/Home/index.html
@@ -7,21 +7,64 @@ Mollomm1's Projects</title>
 <meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
 <meta name="description" content="Here I Put Every Of My Projects">
 <style>
-body {background-color:#4B4B4B;background-repeat:repeat;background-position:top left;background-attachment:fixed;}
-h1{text-align:center;font-family:Arial, sans-serif;color:#000000;background-color:#4B4B4B;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#4B4B4B;}
+body {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
 </style>
 </head>
 <body>
-<p style="text-align:center"><span style="color:#ffffff"><span style="font-size:48px"><u><strong><span style="font-family:Arial,Helvetica,sans-serif">Mollomm1&#39;s Projects</span></strong></u></span></span></p>
 
-<hr />
-<p style="text-align:center"><span style="font-size:18px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://mollomm1.github.io/Home"><span style="background-color:#4B4B4B">Home</span></a><span style="background-color:#4B4B4B"> | </span><a href="https://mollomm1.github.io/Roblox-Projects"><span style="background-color:#4B4B4B">Roblox Projects</span></a><span style="background-color:#4B4B4B"> | </span><a href="https://mollomm1.github.io/win-apps"><span style="background-color:#4B4B4B">Windows Apps</span></a></span></span></p>
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
-<hr />
-<p style="text-align:center"><span style="font-size:72px"><span style="background-color:#4e5f70">&nbsp; &nbsp; &nbsp; <span style="color:#ffffff">Home</span>&nbsp; &nbsp; &nbsp;&nbsp;</span></span></p>
+<div style="margin-left:25%;padding:1px 16px;height:1000px;">
+  <h2>Fixed Full-height Side Nav</h2>
+  <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
+  <p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
+  <p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>
+  <p>Some text..</p>
+  <p>Some text..</p>
+  <p>Some text..</p>
+  <p>Some text..</p>
+  <p>Some text..</p>
+  <p>Some text..</p>
+  <p>Some text..</p>
+</div>
 
-<p style="text-align:center"><span style="color:#ffffff"><span style="font-size:28px">(W.I.P)</span></span></p>
+</body>
+</html>
 
 
 </body>
