--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<title>
-Mollomm1's Projects</title>
+<title>Mollomm1's Projects</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
 <meta name="description" content="Here I Put Every Of My Projects">
