--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-<title>Mollomm1's Projects</title>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Mollomm1's Projects</title>
+<meta name="description" content="It's Here i put my projects">
+<meta name="author" content="Mollomm1">
+<meta name="robots" content="index, follow">
 <meta name="keywords" content="mollomm1, empty group finder, roblox, MGF, group finder">
-<meta name="description" content="Here I Put Every Of My Projects">
 <meta http-equiv="refresh" content="0;URL=https://mollomm1.github.io/Home">
 </head>
 <body>
