--- a/Home/index.html
+++ b/Home/index.html
@@ -1,1 +1,170 @@
-wip
+<Symbol1 class="hamburger-menu"></Symbol1>
+<style>
+  .hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: -5px;
+    margin-right: auto;
+    padding-bottom: 16px;
+    padding-right: 21px;
+  }
+  .dark-overlay {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    margin-top: 20px;
+    height: 100vh;
+    flex-grow: 1;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 1);
+    top: -20px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    opacity: 0.25;
+  }
+  @media (max-width: 991px) {
+    .dark-overlay {
+      display: flex;
+    }
+  }
+  .menu-container {
+    position: fixed;
+    margin-top: 20px;
+    min-width: auto;
+    max-width: auto;
+    width: 333.01px;
+    top: -20px;
+    z-index: 100;
+    min-height: auto;
+    background-color: rgba(255, 255, 255, 1);
+    display: flex;
+    flex-direction: column;
+    box-shadow: 1px 1px 62px 0 rgba(0, 0, 0, 0.34);
+    height: 100vh;
+    padding-right: 20px;
+    padding-left: 20px;
+    left: -200vw;
+  }
+  @media (max-width: 991px) {
+    .menu-container {
+      height: 100vh;
+    }
+  }
+  @media (max-width: 640px) {
+    .menu-container {
+      width: 100vw;
+      max-width: 100vw;
+      display: flex;
+    }
+  }
+  .close-button {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: 5px;
+    line-height: normal;
+    height: auto;
+    text-align: center;
+    margin-left: auto;
+    font-size: 38px;
+    width: auto;
+    font-weight: 300;
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  @media (max-width: 991px) {
+    .close-button {
+      margin-top: 0px;
+      margin-left: 0px;
+      margin-bottom: 15px;
+    }
+  }
+  .link-1 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-left: 0px;
+    line-height: normal;
+    height: auto;
+    text-align: left;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-bottom: 10px;
+  }
+  .link-2 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-left: 0px;
+    line-height: normal;
+    height: auto;
+    text-align: left;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-bottom: 10px;
+  }
+  .link-3 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-left: 0px;
+    line-height: normal;
+    height: auto;
+    text-align: left;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-bottom: 10px;
+  }
+  .button-1 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: 10px;
+    appearance: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: #3898EC;
+    color: white;
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+  }
+  .button-2 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: 10px;
+    appearance: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 1);
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 1);
+    border-width: 1px;
+  }
+  .hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: auto;
+    height: auto;
+    width: auto;
+    margin-left: 20px;
+    cursor: pointer;
+    line-height: normal;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    margin-bottom: auto;
+  }
+</style>
