--- a/index.html
+++ b/index.html
@@ -1,699 +1,6 @@
-<div class="updated" data-name="updated">
-  <section class="section">
-    <div class="group-2-updated">
-      <div
-        backgroundImage="url(https://cdn.builder.io/api/v1/image/assets%2FYJIGb4i01jvw0SRdL5Bt%2Fe67ca22f446f46faa214bb00cf15b18e)"
-        backgroundPosition="center"
-        class="div"
-        data-name="div-1"
-      >
-        <section class="section">
-          <div class="wrap-center-updated">
-            <div
-              image="https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e"
-              backgroundSize="contain"
-              backgroundPosition="center"
-              class="bitmap"
-              data-name="bitmap"
-            >
-              <picture>
-                <source
-                  srcset="
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=100   100w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=200   200w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=400   400w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=800   800w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=1200 1200w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=1600 1600w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?format=webp&width=2000 2000w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e
-                  "
-                  type="image/webp"
-                />
+  <script src="https://cdn.builder.io/js/webcomponents"></script>
+  <builder-component model="home" api-key="0dbf0a5aee1549dda67a0df4c6bd3b30"></builder-component>
 
-                <img
-                  src="https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e"
-                  srcset="
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=100   100w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=200   200w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=400   400w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=800   800w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=1200 1200w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=1600 1600w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e?width=2000 2000w,
-                    https://cdn.builder.io/api/v1/file/assets%2FYJIGb4i01jvw0SRdL5Bt%2F0a125c84583444a69a31a7ec6b35053e
-                  "
-                  class="image"
-                />
-              </picture>
-
-              <div class="builder-image-sizer image-sizer"></div>
-            </div>
-
-            <div class="wrap-updated">
-              <a href="/home" class="platform-tour"><p>Home</p></a>
-
-              <a href="/roblox-projects" class="design-education">
-                <p>Roblox Projects</p>
-              </a>
-
-              <div class="design-community"><p>Apps</p></div>
-
-              <a href="/work" class="enterprise"><p>Talent (Buy my Work)</p></a>
-            </div>
-
-            <div class="group-9-updated">
-              <div class="wrap-right-updated"></div>
-
-              <a href="/account" class="sign-up-free"><p>Login/Sign up</p></a>
-            </div>
-          </div>
-
-          <div class="center-updated">
-            <div class="center"><p>You Can Here Found All My Projects</p></div>
-
-            <div class="center-2">
-              <p>roblox related projecs, apps, others ...</p>
-            </div>
-
-            <div class="center-updated-2"></div>
-
-            <div stackColumnsAt="tablet" data-name="div-2">
-              <div class="builder-columns columns">
-                <div class="builder-column column">
-                  <div class="container"><p>Roblox Projects</p></div>
-                </div>
-
-                <div class="builder-column column-2">
-                  <div class="container"><p>Apps</p></div>
-                </div>
-
-                <div class="builder-column column-3">
-                  <div class="div-2">
-                    <div class="container"><p>My Roblox Talent</p></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-
-      <div class="center-updated-3"></div>
-
-      <div
-        stackColumnsAt="tablet"
-        class="columns-center-updated"
-        data-name="columns-center-updated"
-      >
-        <div class="builder-columns columns">
-          <div class="builder-column column-4">
-            <div class="group-8-updated">
-              <div class="contact">Contact</div>
-
-              <div class="contact-lorem"><p>Contact Me (Roblox MSG)</p></div>
-            </div>
-          </div>
-
-          <div class="builder-column column-5">
-            <div class="group-5-updated"></div>
-          </div>
-
-          <div class="builder-column column-6">
-            <div class="group-6-updated">
-              <div class="platform"><p>Social Media</p></div>
-
-              <div class="freehand"><p>Discord</p></div>
-
-              <div class="boards"><p>Youtube</p></div>
-
-              <div class="boards"><p>Roblox Group</p></div>
-            </div>
-          </div>
-
-          <div class="builder-column column-7">
-            <div class="group-7-updated">
-              <div class="resources">Resources</div>
-
-              <div class="design-resources">
-                <p>Roblox Open Source projects/tutorials</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
-<style>
-  .updated {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin-left: calc(50% - 50vw);
-    width: 100vw;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-family: Source Sans Pro, sans-serif;
-    padding-bottom: 50px;
-  }
-  .section {
-    width: 100%;
-    align-self: stretch;
-    flex-grow: 1;
-    max-width: 1200px;
-    display: flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .group-2-updated {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  .div {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-left: calc(50% - 50vw);
-    width: 100vw;
-    padding-left: 20px;
-    padding-right: 20px;
-    background-image: url(https://cdn.builder.io/api/v1/image/assets%2FYJIGb4i01jvw0SRdL5Bt%2Fe67ca22f446f46faa214bb00cf15b18e?width=2000);
-    background-position: center;
-    background-size: cover;
-    padding-bottom: 242px;
-    padding-top: 17px;
-  }
-  @media (max-width: 991px) {
-    .div {
-      padding-bottom: 102px;
-    }
-  }
-  .wrap-center-updated {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-  }
-  .bitmap {
-    height: 26px;
-    width: 123px;
-    max-width: 90vw;
-    margin-top: 6.5px;
-    margin-left: 0px;
-    position: relative;
-  }
-  @media (max-width: 991px) {
-    .bitmap {
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-  .image {
-    object-fit: contain;
-    object-position: center;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-  }
-  .image-sizer {
-    width: 100%;
-    padding-top: 21.138211382113823%;
-    pointer-events: none;
-    font-size: 0;
-  }
-  .wrap-updated {
-    margin-top: 13px;
-    margin-left: auto;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-right: auto;
-  }
-  @media (max-width: 640px) {
-    .wrap-updated {
-      margin-left: 0px;
-      justify-content: center;
-      padding-right: 19px;
-    }
-  }
-  .platform-tour {
-    height: auto;
-    width: auto;
-    color: rgba(255, 255, 255, 1);
-    font-size: 14px;
-    margin-top: 0px;
-    margin-left: 0px;
-    position: relative;
-    display: flex;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  @media (max-width: 640px) {
-    .platform-tour {
-      margin-left: 20px;
-      margin-top: 20px;
-    }
-  }
-  .design-education {
-    height: auto;
-    width: auto;
-    color: rgba(255, 255, 255, 1);
-    font-size: 14px;
-    margin-top: 0px;
-    margin-left: 53.3px;
-    position: relative;
-    display: flex;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  @media (max-width: 640px) {
-    .design-education {
-      margin-left: 20px;
-      margin-top: 20px;
-    }
-  }
-  .design-community {
-    height: auto;
-    width: auto;
-    color: rgba(255, 255, 255, 1);
-    font-size: 14px;
-    margin-top: 0px;
-    margin-left: 55.2px;
-    position: relative;
-  }
-  @media (max-width: 640px) {
-    .design-community {
-      margin-left: 20px;
-      margin-top: 20px;
-    }
-  }
-  .enterprise {
-    height: auto;
-    width: auto;
-    color: rgba(255, 255, 255, 1);
-    font-size: 14px;
-    margin-top: 0px;
-    margin-left: 66.5px;
-    position: relative;
-    display: flex;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  @media (max-width: 640px) {
-    .enterprise {
-      margin-left: 20px;
-      margin-top: 20px;
-    }
-  }
-  .group-9-updated {
-    margin-top: 0px;
-    margin-left: auto113.5px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .group-9-updated {
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 15px;
-    }
-  }
-  .wrap-right-updated {
-    margin-top: 0px;
-    position: relative;
-    margin-left: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .sign-up-free {
-    height: auto;
-    width: auto;
-    color: rgba(255, 51, 102, 1);
-    font-size: 14px;
-    position: relative;
-    border-style: solid;
-    border-width: 1px;
-    padding-left: 23px;
-    padding-top: 13px;
-    padding-bottom: 13px;
-    padding-right: 23px;
-    border-radius: 400px;
-    font-weight: 600;
-    display: flex;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  @media (max-width: 991px) {
-    .sign-up-free {
-      margin-left: 0px;
-    }
-  }
-  .center-updated {
-    margin-top: 186.2px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .center-updated {
-      margin-top: 129.2px;
-    }
-  }
-  .center {
-    height: auto;
-    width: auto;
-    letter-spacing: 4.6px;
-    color: rgba(255, 255, 255, 1);
-    font-size: 46px;
-    margin-top: 0px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  @media (max-width: 991px) {
-    .center {
-      width: auto;
-      align-self: stretch;
-      text-align: center;
-    }
-  }
-  @media (max-width: 640px) {
-    .center {
-      margin-top: -57px;
-    }
-  }
-  .center-2 {
-    height: auto;
-    width: auto;
-    color: rgba(255, 255, 255, 1);
-    font-size: 22px;
-    margin-top: 17px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  @media (max-width: 991px) {
-    .center-2 {
-      text-align: center;
-    }
-  }
-  .center-updated-2 {
-    margin-top: 59px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .columns {
-    display: flex;
-  }
-  @media (max-width: 999px) {
-    .columns {
-      flex-direction: column;
-      align-items: stretch;
-    }
-  }
-  .column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(33.333333333333336% - 13.333333333333334px);
-    margin-left: 0px;
-  }
-  @media (max-width: 999px) {
-    .column {
-      width: 100%;
-    }
-  }
-  .container {
-    border: 1px solid rgba(255, 51, 102, 1);
-    background-color: rgba(255, 51, 102, 1);
-    box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.1215686274509804);
-    border-radius: 11589px;
-    margin-top: 0px;
-    position: relative;
-    padding-left: 46px;
-    padding-top: 28px;
-    padding-bottom: 28px;
-    padding-right: 46px;
-    margin-bottom: -1px;
-    margin-left: auto;
-    margin-right: auto;
-    height: auto;
-    color: rgba(255, 255, 255, 1);
-    font-size: 16px;
-  }
-  .column-2 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(33.333333333333336% - 13.333333333333334px);
-    margin-left: 20px;
-  }
-  @media (max-width: 999px) {
-    .column-2 {
-      width: 100%;
-    }
-  }
-  .column-3 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(33.333333333333336% - 13.333333333333334px);
-    margin-left: 20px;
-  }
-  @media (max-width: 999px) {
-    .column-3 {
-      width: 100%;
-    }
-  }
-  .div-2 {
-    display: flex;
-    flex-direction: column;
-  }
-  .center-updated-3 {
-    margin-top: 227px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .columns-center-updated {
-    margin-top: 64px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  @media (max-width: 991px) {
-    .columns-center-updated {
-      margin-top: 45px;
-      width: auto;
-      align-self: stretch;
-      text-align: center;
-    }
-  }
-  .column-4 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(25% - 15px);
-    margin-left: 0px;
-  }
-  @media (max-width: 999px) {
-    .column-4 {
-      width: 100%;
-    }
-  }
-  .group-8-updated {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .group-8-updated {
-      margin-top: 35px;
-    }
-  }
-  .contact {
-    height: auto;
-    width: auto;
-    color: rgba(159, 161, 167, 1);
-    font-size: 12px;
-    margin-top: 0px;
-    margin-left: 0px;
-    position: relative;
-  }
-  .contact-lorem {
-    height: auto;
-    width: auto;
-    color: rgba(74, 78, 87, 1);
-    font-size: 14px;
-    margin-left: 0px;
-    margin-top: 38px;
-    position: relative;
-  }
-  .column-5 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(25% - 15px);
-    margin-left: 20px;
-  }
-  @media (max-width: 999px) {
-    .column-5 {
-      width: 100%;
-    }
-  }
-  .group-5-updated {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .group-5-updated {
-      margin-top: 35px;
-    }
-  }
-  .column-6 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(25% - 15px);
-    margin-left: 20px;
-  }
-  @media (max-width: 999px) {
-    .column-6 {
-      width: 100%;
-    }
-  }
-  .group-6-updated {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .group-6-updated {
-      margin-top: 35px;
-    }
-  }
-  .platform {
-    height: auto;
-    width: auto;
-    color: rgba(159, 161, 167, 1);
-    font-size: 12px;
-    margin-top: 0px;
-    margin-left: 0px;
-    position: relative;
-  }
-  .freehand {
-    height: auto;
-    width: auto;
-    color: rgba(74, 78, 87, 1);
-    font-size: 14px;
-    margin-left: 0px;
-    margin-top: 38px;
-    position: relative;
-  }
-  .boards {
-    height: auto;
-    width: auto;
-    color: rgba(74, 78, 87, 1);
-    font-size: 14px;
-    margin-left: 0px;
-    margin-top: 20px;
-    position: relative;
-  }
-  .column-7 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: calc(25% - 15px);
-    margin-left: 20px;
-  }
-  @media (max-width: 999px) {
-    .column-7 {
-      width: 100%;
-    }
-  }
-  .group-7-updated {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  @media (max-width: 991px) {
-    .group-7-updated {
-      margin-top: 35px;
-    }
-  }
-  .resources {
-    height: auto;
-    width: auto;
-    color: rgba(159, 161, 167, 1);
-    font-size: 12px;
-    margin-top: 0px;
-    margin-left: 0px;
-    position: relative;
-  }
-  .design-resources {
-    height: auto;
-    width: auto;
-    color: rgba(74, 78, 87, 1);
-    font-size: 14px;
-    margin-left: 0px;
-    margin-top: 38px;
-    position: relative;
-  }
-</style>
-<script>
-  (() => {
-    const state = {};
-
-    // Function to update data bindings and loops
-    // call update() when you mutate state and need the updates to reflect
-    // in the dom
-    function update() {
-      document.querySelectorAll("[data-name='updated']").forEach((el) => {
-        el.maxWidth = 1200;
-      });
-
-      document.querySelectorAll("[data-name='div-1']").forEach((el) => {
-        el.maxWidth = 1200;
-      });
-
-      document.querySelectorAll("[data-name='bitmap']").forEach((el) => {
-        el.aspectRatio = 0.21138211382113822;
-      });
-
-      document.querySelectorAll("[data-name='div-2']").forEach((el) => {
-        el.space = 30;
-      });
-
-      document
-        .querySelectorAll("[data-name='columns-center-updated']")
-        .forEach((el) => {
-          el.space = 20;
-        });
-    }
-
-    // Update with initial state on first load
-    update();
-  })();
-</script>
+  <!-- Or use our APIs:
+    https://www.builder.io/c/docs/html-api
+    https://www.builder.io/c/docs/query-api -->
