--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-  <script src="https://cdn.builder.io/js/webcomponents"></script>
-  <builder-component model="home" api-key="0dbf0a5aee1549dda67a0df4c6bd3b30"></builder-component>
-
-  <!-- Or use our APIs:
-    https://www.builder.io/c/docs/html-api
-    https://www.builder.io/c/docs/query-api -->
+<!-- Put this component where you want this Builder content to display -->
+<builder-component model="home" api-key="0dbf0a5aee1549dda67a0df4c6bd3b30">
+  <!-- content here displays while loading -->
+  Loading...
+</builder-component>
