--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Put this component where you want this Builder content to display -->
-<builder-component model="home" api-key="0dbf0a5aee1549dda67a0df4c6bd3b30">
+<builder-component model="Home" api-key="0dbf0a5aee1549dda67a0df4c6bd3b30">
   <!-- content here displays while loading -->
   Loading...
 </builder-component>
